[package]
name = "mario"
version = "0.1.0"
edition = "2024"

[lib]
test = false
bench = false

# [profile.release]
# lto = true

[dependencies]
cortex-m = { version = "0.7.7", features = [ "critical-section-single-core" ] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-stm32 = { version = "0.2.0", features = [ "stm32g0b1re", "memory-x" ] }
rustfsm = { git = "https://github.com/hbacelar8/rustfsm", version = "0.1.0" }
